--- a/commands/commands3.css
+++ b/commands/commands3.css
@@ -1,4 +1,4 @@
-################### How CSS Works: A Look Behind the Scenes ###################
+***************** How CSS Works: A Look Behind the Scenes *****************
 1. 
   a) Responsive Design
   b) Maintenable and Scalable Code
