--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,3 +1,10 @@
+$color-primary: #55c57a;
+$color-primary-light: #7ed56f;
+$color-primary-dark: #28b485;
+
+$color-gray-dark: #777;
+
+$color-white: #fff;
 /* basic reset */
 *,
 *::after,
@@ -5,7 +12,8 @@
   margin: 0;
   padding: 0;
   /* we inherit the box-sizig for entire page from body */
-  box-sizing: inherit; }
+  box-sizing: inherit;
+}
 
 html {
   /* Divide what we want by 10px to be the root measure, because irem = 10px, 
@@ -16,7 +24,8 @@ html {
       If the user changes to 20px will have
       0.625 x 20px = 12.5px
   */
-  font-size: 62.5%; }
+  font-size: 62.5%;
+}
 
 body {
   /*  use here font to inherit it down, this font-family is the parent for all childs */
@@ -25,17 +34,20 @@ body {
   /* font-size: 16px; */
   /* 1.7 bigger then the predifined one */
   line-height: 1.7;
-  color: #777;
+  color: $color-gray-dark;
   /***** padding for entire web page ******/
   padding: 3rem;
   /* border and padding no longer added to total width or hight */
-  box-sizing: border-box; }
+  box-sizing: border-box;
+}
 
 .header {
   /* 95% of the view port hight */
   height: 95vh;
   /*  we put gradient first so will be in the top of the image */
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 133, 0.801)), url(../img/hero.jpg);
+  background-image:
+    linear-gradient(to right bottom, rgba($color-primary-light, 0.801), rgba($color-primary-dark, 0.801)),
+    url(../img/hero.jpg);
   /* cover = fits the element inside of the box */
   background-size: cover;
   /* with diff size of browser img stays still at top visible */
@@ -43,22 +55,26 @@ body {
   /* start from the top left going in the clock wise direction */
   clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
   /* this is the origin where the top and let starts to count for logo-box */
-  position: relative; }
+  position: relative;
+}
 
 .header__logo-box {
   /* this is absolute to .header */
   position: absolute;
   top: 4rem;
-  left: 4rem; }
+  left: 4rem;
+}
 
 .header__logo {
   height: 3.5rem;
-  /* width with be automatically figure out by th browser or viceceversa*/ }
+  /* width with be automatically figure out by th browser or viceceversa*/
+}
 
 /* .logo:hover {
   animation: moveInRight 1s ease-out;
 } 
 */
+
 .header__text-box {
   /* this is absolute to .header */
   position: absolute;
@@ -67,16 +83,18 @@ body {
   /* translate on x and y, center it */
   transform: translate(-50%, -50%);
   /* this will aling the btn to center because is text */
-  text-align: center; }
+  text-align: center;
+}
 
 .heading-primary {
-  color: #fff;
+  color: $color-white;
   text-transform: uppercase;
   /* to not move the animation a little to top, 
   and if we rotate a item to not see the back part*/
   backface-visibility: hidden;
   /* push down the white button */
-  margin-bottom: 6rem; }
+  margin-bottom: 6rem;
+}
 
 .heading-primary--main {
   /* display block to have each one on a row */
@@ -84,10 +102,12 @@ body {
   font-size: 6rem;
   font-weight: 400;
   letter-spacing: 3.5rem;
+
   animation: moveInLeft 2s ease-out;
   /* animation-duration: 2s;
   animation-timing-function: ease-out; 
-  */ }
+  */
+}
 
 .heading-primary--sub {
   /* display block to have each one on a row */
@@ -99,9 +119,11 @@ body {
   animation-duration: 2s; 
   animation-delay: 1s;
   */
-  animation: moveInRight 2s ease-out; }
+  animation: moveInRight 2s ease-out;
+}
 
 @keyframes moveInLeft {
+
   /* start with 0% */
   0% {
     /* start invizible */
@@ -109,32 +131,48 @@ body {
     /*  when the animation start we wnat to be more in the left
       animate in X direction, more in the left the in the beginning, so use negative value 
     */
-    transform: translateX(-10rem); }
+    transform: translateX(-10rem) ;
+  }
+
   80% {
-    transform: translateX(10rem); }
+    transform: translateX(10rem);
+  }
+
   /* finish at 100% */
   100% {
     opacity: 1;
     /* 0 because should be how is now */
-    transform: translate(0); } }
+    transform: translate(0);
+  }
+}
 
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(10rem); }
+    transform: translateX(10rem);
+  }
+
   80% {
-    transform: translateX(-1rem); }
+    transform: translateX(-1rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translate(0); } }
+    transform: translate(0);
+  }
+}
 
 @keyframes moveInBottom {
   0% {
     opacity: 0;
-    transform: translateY(30rem); }
+    transform: translateY(30rem);
+  }
+
   100% {
     opacity: 1;
-    transform: translate(0); } }
+    transform: translate(0);
+  }
+}
 
 .btn:link,
 .btn:visited {
@@ -147,18 +185,21 @@ body {
   transition: all .5s;
   position: relative;
   /* 16px */
-  font-size: 1.6rem; }
+  font-size: 1.6rem;
+}
 
 .btn:hover {
   /* minus because in CSS moves from top to bottom, 
    so when you press the button it goes up a little */
-  transform: translateY(-0.3rem);
+  transform: translateY(-.3rem);
   /* x y blur */
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, .2);
+}
 
 .btn:active {
-  transform: translateY(-0.1rem);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
+  transform: translateY(-.1rem);
+  box-shadow: 0 .5rem 1rem rgba(0, 0, 0, .5);
+}
 
 /* DISCOVERY TOURS button that zooms out to infinity when we hover */
 .btn::after {
@@ -179,7 +220,8 @@ body {
   is behind because we have to see the button text*/
   z-index: -1;
   /* we put the animation in here because here is the initial state */
-  transition: all .4s; }
+  transition: all .4s;
+}
 
 /* DISCOVERY TOURS button that zooms out to infinity when we hover */
 /* this is ::after pseudo element only when we hover the button */
@@ -187,14 +229,17 @@ body {
   /* we want it to be bigger on hover */
   transform: scaleX(1.4) scaleY(1.6);
   /* fade out disapear */
-  opacity: 0; }
+  opacity: 0;
+}
 
 .btn--white {
-  background-color: #fff;
-  color: #777; }
+  background-color: $color-white;
+  color: $color-gray-dark;
+}
 
 .btn--white::after {
-  background-color: #fff; }
+  background-color: $color-white;
+}
 
 /* only .btn will have this class */
 .btn--animated {
@@ -205,4 +250,5 @@ body {
     opacity: 0;
     transform: translateY(30rem);
   */
-  animation-fill-mode: backwards; }
+  animation-fill-mode: backwards;
+}
