--- a/css/style.css
+++ b/css/style.css
@@ -43,31 +43,28 @@ body {
   /* start from the top left going in the clock wise direction */
   clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
   /* this is the origin where the top and let starts to count for logo-box */
-  position: relative; }
-
-.header__logo-box {
-  /* this is absolute to .header */
-  position: absolute;
-  top: 4rem;
-  left: 4rem; }
-
-.header__logo {
-  height: 3.5rem;
-  /* width with be automatically figure out by th browser or viceceversa*/ }
-
-/* .logo:hover {
-  animation: moveInRight 1s ease-out;
-} 
-*/
-.header__text-box {
-  /* this is absolute to .header */
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  /* translate on x and y, center it */
-  transform: translate(-50%, -50%);
-  /* this will aling the btn to center because is text */
-  text-align: center; }
+  position: relative;
+  /* .logo:hover {
+        animation: moveInRight 1s ease-out;
+      } 
+  */ }
+  .header__logo-box {
+    /* this is absolute to .header */
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem;
+    /* width with be automatically figure out by th browser or viceceversa*/ }
+  .header__text-box {
+    /* this is absolute to .header */
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    /* translate on x and y, center it */
+    transform: translate(-50%, -50%);
+    /* this will aling the btn to center because is text */
+    text-align: center; }
 
 .heading-primary {
   color: #fff;
@@ -77,29 +74,27 @@ body {
   backface-visibility: hidden;
   /* push down the white button */
   margin-bottom: 6rem; }
-
-.heading-primary--main {
-  /* display block to have each one on a row */
-  display: block;
-  font-size: 6rem;
-  font-weight: 400;
-  letter-spacing: 3.5rem;
-  animation: moveInLeft 2s ease-out;
-  /* animation-duration: 2s;
-  animation-timing-function: ease-out; 
-  */ }
-
-.heading-primary--sub {
-  /* display block to have each one on a row */
-  display: block;
-  font-size: 2rem;
-  font-weight: 400;
-  letter-spacing: 1.76rem;
-  /* animation-name: moveInRight;
-  animation-duration: 2s; 
-  animation-delay: 1s;
-  */
-  animation: moveInRight 2s ease-out; }
+  .heading-primary--main {
+    /* display block to have each one on a row */
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation: moveInLeft 2s ease-out;
+    /* animation-duration: 2s;
+    animation-timing-function: ease-out; 
+    */ }
+  .heading-primary--sub {
+    /* display block to have each one on a row */
+    display: block;
+    font-size: 2rem;
+    font-weight: 400;
+    letter-spacing: 1.76rem;
+    /* animation-name: moveInRight;
+    animation-duration: 2s; 
+    animation-delay: 1s;
+    */
+    animation: moveInRight 2s ease-out; }
 
 @keyframes moveInLeft {
   /* start with 0% */
@@ -136,73 +131,66 @@ body {
     opacity: 1;
     transform: translate(0); } }
 
-.btn:link,
-.btn:visited {
-  text-transform: uppercase;
-  text-decoration: none;
-  padding: 1.5rem 4rem;
-  display: inline-block;
-  border-radius: 10rem;
-  /* animate all properties in 2s */
-  transition: all .5s;
-  position: relative;
-  /* 16px */
-  font-size: 1.6rem; }
-
-.btn:hover {
-  /* minus because in CSS moves from top to bottom, 
+.btn {
+  /* DISCOVERY TOURS button that zooms out to infinity when we hover */
+  /* only .btn will have this class */ }
+  .btn:link, .btn:visited {
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 1.5rem 4rem;
+    display: inline-block;
+    border-radius: 10rem;
+    /* animate all properties in 2s */
+    transition: all .5s;
+    position: relative;
+    /* 16px */
+    font-size: 1.6rem; }
+  .btn:hover {
+    /* minus because in CSS moves from top to bottom, 
    so when you press the button it goes up a little */
-  transform: translateY(-0.3rem);
-  /* x y blur */
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2); }
-
-.btn:active {
-  transform: translateY(-0.1rem);
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
-
-/* DISCOVERY TOURS button that zooms out to infinity when we hover */
-.btn::after {
-  /* ::after to show up are required content and display*/
-  content: "";
-  /* inline-block because the btn is same inline-block */
-  display: inline-block;
-  /* width and height 100% means 100% of width and height of the btn
+    transform: translateY(-0.3rem);
+    /* x y blur */
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+    /* DISCOVERY TOURS button that zooms out to infinity when we hover */
+    /* this is ::after pseudo element only when we hover the button */ }
+    .btn:hover::after {
+      /* we want it to be bigger on hover */
+      transform: scaleX(1.4) scaleY(1.6);
+      /* fade out disapear */
+      opacity: 0; }
+  .btn:active {
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.5); }
+  .btn::after {
+    /* ::after to show up are required content and display*/
+    content: "";
+    /* inline-block because the btn is same inline-block */
+    display: inline-block;
+    /* width and height 100% means 100% of width and height of the btn
   because is treated like a child of the btn*/
-  height: 100%;
-  width: 100%;
-  border-radius: 10rem;
-  /* this is absolute to .btn */
-  position: absolute;
-  top: 0;
-  left: 0;
-  /* -1 to have this cool animation behind the btn 
+    height: 100%;
+    width: 100%;
+    border-radius: 10rem;
+    /* this is absolute to .btn */
+    position: absolute;
+    top: 0;
+    left: 0;
+    /* -1 to have this cool animation behind the btn 
   is behind because we have to see the button text*/
-  z-index: -1;
-  /* we put the animation in here because here is the initial state */
-  transition: all .4s; }
-
-/* DISCOVERY TOURS button that zooms out to infinity when we hover */
-/* this is ::after pseudo element only when we hover the button */
-.btn:hover::after {
-  /* we want it to be bigger on hover */
-  transform: scaleX(1.4) scaleY(1.6);
-  /* fade out disapear */
-  opacity: 0; }
-
-.btn--white {
-  background-color: #fff;
-  color: #777; }
-
-.btn--white::after {
-  background-color: #fff; }
-
-/* only .btn will have this class */
-.btn--animated {
-  /* animation-delay: .75s  so will start after others animation*/
-  animation: moveInBottom .5s ease-out .75s;
-  /* automatically apllys the styles, from moveInBottom, to zero before the animation starts 
+    z-index: -1;
+    /* we put the animation in here because here is the initial state */
+    transition: all .4s; }
+  .btn--white {
+    background-color: #fff;
+    color: #777; }
+    .btn--white::after {
+      background-color: #fff; }
+  .btn--animated {
+    /* animation-delay: .75s  so will start after others animation*/
+    animation: moveInBottom .5s ease-out .75s;
+    /* automatically apllys the styles, from moveInBottom, to zero before the animation starts 
     so this will be appy before animation starts 
     opacity: 0;
     transform: translateY(30rem);
   */
-  animation-fill-mode: backwards; }
+    animation-fill-mode: backwards; }
