--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,7 @@
 
 html {
   /* Divide what we want by 10px to be the root measure, because irem = 10px, 
-  so 10 diveide to the default browser, 16. So 10/16 = 0,625 * 100 = 62.5 
+  so 10 diveide to the default browser, 16. So 10/16 = 0,625 * 100 = 62.5 = 1rem
       So we used % to not overwrite the browser setting, because the user 
       can modify it, increase, fot size for browser
       0.625 x 16px = 10px
@@ -19,82 +19,7 @@ html {
   font-size: 62.5%; }
 
 body {
-  /*  use here font to inherit it down, this font-family is the parent for all childs */
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  /* font-size: 16px; */
-  /* 1.7 bigger then the predifined one */
-  line-height: 1.7;
-  color: #777;
-  /***** padding for entire web page ******/
-  padding: 3rem;
-  /* border and padding no longer added to total width or hight */
   box-sizing: border-box; }
-
-.header {
-  /* 95% of the view port hight */
-  height: 95vh;
-  /*  we put gradient first so will be in the top of the image */
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 133, 0.801)), url(../img/hero.jpg);
-  /* cover = fits the element inside of the box */
-  background-size: cover;
-  /* with diff size of browser img stays still at top visible */
-  background-position: top;
-  /* start from the top left going in the clock wise direction */
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-  /* this is the origin where the top and let starts to count for logo-box */
-  position: relative;
-  /* .logo:hover {
-        animation: moveInRight 1s ease-out;
-      } 
-  */ }
-  .header__logo-box {
-    /* this is absolute to .header */
-    position: absolute;
-    top: 4rem;
-    left: 4rem; }
-  .header__logo {
-    height: 3.5rem;
-    /* width with be automatically figure out by th browser or viceceversa*/ }
-  .header__text-box {
-    /* this is absolute to .header */
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    /* translate on x and y, center it */
-    transform: translate(-50%, -50%);
-    /* this will aling the btn to center because is text */
-    text-align: center; }
-
-.heading-primary {
-  color: #fff;
-  text-transform: uppercase;
-  /* to not move the animation a little to top, 
-  and if we rotate a item to not see the back part*/
-  backface-visibility: hidden;
-  /* push down the white button */
-  margin-bottom: 6rem; }
-  .heading-primary--main {
-    /* display block to have each one on a row */
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-    animation: moveInLeft 2s ease-out;
-    /* animation-duration: 2s;
-    animation-timing-function: ease-out; 
-    */ }
-  .heading-primary--sub {
-    /* display block to have each one on a row */
-    display: block;
-    font-size: 2rem;
-    font-weight: 400;
-    letter-spacing: 1.76rem;
-    /* animation-name: moveInRight;
-    animation-duration: 2s; 
-    animation-delay: 1s;
-    */
-    animation: moveInRight 2s ease-out; }
 
 @keyframes moveInLeft {
   /* start with 0% */
@@ -130,6 +55,47 @@ body {
   100% {
     opacity: 1;
     transform: translate(0); } }
+
+body {
+  /*  use here font to inherit it down, this font-family is the parent for all childs */
+  font-family: "Lato", sans-serif;
+  font-weight: 400;
+  /* font-size: 16px; */
+  /* 1.7 bigger then the predifined one */
+  line-height: 1.7;
+  color: #777;
+  /***** padding for entire web page ******/
+  padding: 3rem; }
+
+.heading-primary {
+  color: #fff;
+  text-transform: uppercase;
+  /* to not move the animation a little to top, 
+  and if we rotate a item to not see the back part*/
+  backface-visibility: hidden;
+  /* push down the white button */
+  margin-bottom: 6rem; }
+  .heading-primary--main {
+    /* display block to have each one on a row */
+    display: block;
+    font-size: 6rem;
+    font-weight: 400;
+    letter-spacing: 3.5rem;
+    animation: moveInLeft 2s ease-out;
+    /* animation-duration: 2s;
+    animation-timing-function: ease-out; 
+    */ }
+  .heading-primary--sub {
+    /* display block to have each one on a row */
+    display: block;
+    font-size: 2rem;
+    font-weight: 400;
+    letter-spacing: 1.76rem;
+    /* animation-name: moveInRight;
+    animation-duration: 2s; 
+    animation-delay: 1s;
+    */
+    animation: moveInRight 2s ease-out; }
 
 .btn {
   /* DISCOVERY TOURS button that zooms out to infinity when we hover */
@@ -194,3 +160,66 @@ body {
     transform: translateY(30rem);
   */
     animation-fill-mode: backwards; }
+
+.row {
+  width: 114rem;
+  background-color: #eee;
+  margin: 0 auto; }
+  .row:not(:last-child) {
+    margin-bottom: 8rem; }
+  .row::after {
+    content: '';
+    clear: both;
+    display: table; }
+  .row [class^="col-"] {
+    background-color: orangered;
+    float: left; }
+    .row [class^="col-"]:not(:last-child) {
+      margin-right: 6rem; }
+  .row .col-1-of-2 {
+    width: calc( (100% - (2 - 1) * 6rem) * 1 /  2 + (1 - 1) * 6rem); }
+  .row .col-1-of-3 {
+    width: calc( (100% - (3 - 1) * 6rem) * 1 /  3 + (1 - 1) * 6rem); }
+  .row .col-2-of-3 {
+    width: calc( (100% - (3 - 1) * 6rem) * 2 /  3 + (2 - 1) * 6rem); }
+  .row .col-1-of-4 {
+    width: calc( (100% - (4 - 1) * 6rem) * 1 /  4 + (1 - 1) * 6rem); }
+  .row .col-2-of-4 {
+    width: calc( (100% - (4 - 1) * 6rem) * 2 /  4 + (2 - 1) * 6rem); }
+  .row .col-3-of-4 {
+    width: calc( (100% - (4 - 1) * 6rem) * 3 /  4 + (3 - 1) * 6rem); }
+
+.header {
+  /* 95% of the view port hight */
+  height: 95vh;
+  /*  we put gradient first so will be in the top of the image */
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.801), rgba(40, 180, 133, 0.801)), url(../img/hero.jpg);
+  /* cover = fits the element inside of the box */
+  background-size: cover;
+  /* with diff size of browser img stays still at top visible */
+  background-position: top;
+  /* start from the top left going in the clock wise direction */
+  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
+  /* this is the origin where the top and let starts to count for logo-box */
+  position: relative;
+  /* .logo:hover {
+        animation: moveInRight 1s ease-out;
+      } 
+  */ }
+  .header__logo-box {
+    /* this is absolute to .header */
+    position: absolute;
+    top: 4rem;
+    left: 4rem; }
+  .header__logo {
+    height: 3.5rem;
+    /* width with be automatically figure out by th browser or viceceversa*/ }
+  .header__text-box {
+    /* this is absolute to .header */
+    position: absolute;
+    top: 40%;
+    left: 50%;
+    /* translate on x and y, center it */
+    transform: translate(-50%, -50%);
+    /* this will aling the btn to center because is text */
+    text-align: center; }
