--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,262 +1,15 @@
-$color-primary: #55c57a;
-$color-primary-light: #7ed56f;
-$color-primary-dark: #28b485;
+@import "abstracts/functions";
+@import "abstracts/mixins";
+@import "abstracts/variables";
 
-$color-gray-dark: #777;
+@import "base/_base";
+@import "base/animations";
+@import "base/typography";
+@import "base/utillities";
 
-$color-white: #fff;
-$color-black: #000;
+@import "components/button";
 
-/* basic reset */
-*,
-*::after,
-*::before {
-  margin: 0;
-  padding: 0;
-  /* we inherit the box-sizig for entire page from body */
-  box-sizing: inherit;
-}
+@import "layout/grid";
+@import "layout/header";
 
-html {
-  /* Divide what we want by 10px to be the root measure, because irem = 10px, 
-  so 10 diveide to the default browser, 16. So 10/16 = 0,625 * 100 = 62.5 
-      So we used % to not overwrite the browser setting, because the user 
-      can modify it, increase, fot size for browser
-      0.625 x 16px = 10px
-      If the user changes to 20px will have
-      0.625 x 20px = 12.5px
-  */
-  font-size: 62.5%;
-}
-
-body {
-  /*  use here font to inherit it down, this font-family is the parent for all childs */
-  font-family: "Lato", sans-serif;
-  font-weight: 400;
-  /* font-size: 16px; */
-  /* 1.7 bigger then the predifined one */
-  line-height: 1.7;
-  color: $color-gray-dark;
-  /***** padding for entire web page ******/
-  padding: 3rem;
-  /* border and padding no longer added to total width or hight */
-  box-sizing: border-box;
-}
-
-.header {
-  /* 95% of the view port hight */
-  height: 95vh;
-  /*  we put gradient first so will be in the top of the image */
-  background-image:
-    linear-gradient(to right bottom, rgba($color-primary-light, 0.801), rgba($color-primary-dark, 0.801)),
-    url(../img/hero.jpg);
-  /* cover = fits the element inside of the box */
-  background-size: cover;
-  /* with diff size of browser img stays still at top visible */
-  background-position: top;
-  /* start from the top left going in the clock wise direction */
-  clip-path: polygon(0 0, 100% 0, 100% 75%, 0 100%);
-  /* this is the origin where the top and let starts to count for logo-box */
-  position: relative;
-
-  &__logo-box {
-    /* this is absolute to .header */
-    position: absolute;
-    top: 4rem;
-    left: 4rem;
-  }
-
-  &__logo {
-    height: 3.5rem;
-    /* width with be automatically figure out by th browser or viceceversa*/
-  }
-
-  /* .logo:hover {
-        animation: moveInRight 1s ease-out;
-      } 
-  */
-
-  &__text-box {
-    /* this is absolute to .header */
-    position: absolute;
-    top: 40%;
-    left: 50%;
-    /* translate on x and y, center it */
-    transform: translate(-50%, -50%);
-    /* this will aling the btn to center because is text */
-    text-align: center;
-  }
-}
-
-.heading-primary {
-  color: $color-white;
-  text-transform: uppercase;
-  /* to not move the animation a little to top, 
-  and if we rotate a item to not see the back part*/
-  backface-visibility: hidden;
-  /* push down the white button */
-  margin-bottom: 6rem;
-
-  &--main {
-    /* display block to have each one on a row */
-    display: block;
-    font-size: 6rem;
-    font-weight: 400;
-    letter-spacing: 3.5rem;
-
-    animation: moveInLeft 2s ease-out;
-    /* animation-duration: 2s;
-    animation-timing-function: ease-out; 
-    */
-  }
-
-  &--sub {
-    /* display block to have each one on a row */
-    display: block;
-    font-size: 2rem;
-    font-weight: 400;
-    letter-spacing: 1.76rem;
-    /* animation-name: moveInRight;
-    animation-duration: 2s; 
-    animation-delay: 1s;
-    */
-    animation: moveInRight 2s ease-out;
-  }
-}
-
-
-@keyframes moveInLeft {
-
-  /* start with 0% */
-  0% {
-    /* start invizible */
-    opacity: 0;
-    /*  when the animation start we wnat to be more in the left
-      animate in X direction, more in the left the in the beginning, so use negative value 
-    */
-    transform: translateX(-10rem);
-  }
-
-  80% {
-    transform: translateX(10rem);
-  }
-
-  /* finish at 100% */
-  100% {
-    opacity: 1;
-    /* 0 because should be how is now */
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInRight {
-  0% {
-    opacity: 0;
-    transform: translateX(10rem);
-  }
-
-  80% {
-    transform: translateX(-1rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-@keyframes moveInBottom {
-  0% {
-    opacity: 0;
-    transform: translateY(30rem);
-  }
-
-  100% {
-    opacity: 1;
-    transform: translate(0);
-  }
-}
-
-.btn {
-
-  &:link,
-  &:visited {
-    text-transform: uppercase;
-    text-decoration: none;
-    padding: 1.5rem 4rem;
-    display: inline-block;
-    border-radius: 10rem;
-    /* animate all properties in 2s */
-    transition: all .5s;
-    position: relative;
-    /* 16px */
-    font-size: 1.6rem;
-  }
-
-  &:hover {
-    /* minus because in CSS moves from top to bottom, 
-   so when you press the button it goes up a little */
-    transform: translateY(-.3rem);
-    /* x y blur */
-    box-shadow: 0 1rem 2rem rgba($color-black, .2);
-
-    /* DISCOVERY TOURS button that zooms out to infinity when we hover */
-    /* this is ::after pseudo element only when we hover the button */
-    &::after {
-      /* we want it to be bigger on hover */
-      transform: scaleX(1.4) scaleY(1.6);
-      /* fade out disapear */
-      opacity: 0;
-    }
-  }
-
-  &:active {
-    transform: translateY(-.1rem);
-    box-shadow: 0 .5rem 1rem rgba($color-black, .5);
-  }
-
-  /* DISCOVERY TOURS button that zooms out to infinity when we hover */
-  &::after {
-    /* ::after to show up are required content and display*/
-    content: "";
-    /* inline-block because the btn is same inline-block */
-    display: inline-block;
-    /* width and height 100% means 100% of width and height of the btn
-  because is treated like a child of the btn*/
-    height: 100%;
-    width: 100%;
-    border-radius: 10rem;
-    /* this is absolute to .btn */
-    position: absolute;
-    top: 0;
-    left: 0;
-    /* -1 to have this cool animation behind the btn 
-  is behind because we have to see the button text*/
-    z-index: -1;
-    /* we put the animation in here because here is the initial state */
-    transition: all .4s;
-  }
-
-
-  &--white {
-    background-color: $color-white;
-    color: $color-gray-dark;
-
-    &::after {
-      background-color: $color-white;
-    }
-  }
-
-
-  /* only .btn will have this class */
-  &--animated {
-    /* animation-delay: .75s  so will start after others animation*/
-    animation: moveInBottom .5s ease-out .75s;
-    /* automatically apllys the styles, from moveInBottom, to zero before the animation starts 
-    so this will be appy before animation starts 
-    opacity: 0;
-    transform: translateY(30rem);
-  */
-    animation-fill-mode: backwards;
-  }
-}
+@import "pages/home";
