--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -2,7 +2,7 @@
 // will then clearn the floats
 @mixin clearfix {
   &::after {
-    content: '';
+    content: "";
     clear: both;
     display: table;
   }
