--- a/sass/layout/_grid.scss
+++ b/sass/layout/_grid.scss
@@ -1,6 +1,6 @@
 .row {
   width: $grid-width;
-  background-color: #eee;
+  // background-color: #eee;
   margin: 0 auto;
 
   &:not(:last-child) {
@@ -11,7 +11,7 @@
 
   // select only classes that starts with col-
   [class^="col-"] {
-    background-color: orangered;
+    // background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
     float: left;
 
     &:not(:last-child) {
@@ -44,7 +44,6 @@
   // .col-3-of-4 {
   //   width: calc(3 * ((100% - 3 * #{$gutter-horizontal}) / 4) + 2 * #{$gutter-horizontal});
   // }
-
 
   .col-1-of-2 {
     width: colWidth(1, 2);
