--- a/sass/main.scss
+++ b/sass/main.scss
@@ -8,6 +8,9 @@
 @import "base/utillities";
 
 @import "components/button";
+@import "components/card";
+@import "components/composition";
+@import "components/feature-box";
 
 @import "layout/grid";
 @import "layout/header";
